# varutils

./: .gitignore  pyproject.toml  setup.py
varutils/: typing.py
