[tool.poetry]
name = "varutils"
version = "0.0.1"
description = "My personal Python module containing various useful utilities."
authors = ["Andrew Sonin <sonin.cel@yandex.ru>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
